--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: ayakoubi <ayakoubi@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/06 10:59:48 by ayakoubi          #+#    #+#              #
-#    Updated: 2023/07/19 11:26:35 by ayakoubi         ###   ########.fr        #
+#    Updated: 2023/08/16 11:42:31 by ayakoubi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,8 +14,8 @@ NAME	=	contact
 
 ############### COMAPILATION ################
 
-CC		=	c++
-CFLAGS	=	-Wall -Wextra -Werror
+CPP		=	c++
+CPPFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
 ############### SRCS & OBJS ################
 
@@ -23,20 +23,32 @@ SRC		=	main.cpp phonebook.cpp contact.cpp
 
 OBJ		=	$(SRC:.cpp=.o)
 
+RED = \033[1;31m
+GREEN = \033[1;32m
+SPLASH = \033[5m
+BLUE = \033[1;34m
+YELLOW = \033[1;33m
+RESET = \033[0m
+
 %.o : %.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CPP) $(CPPFALGS) -c $< -o $@
+	@echo "$(YELLOW) compile >>>> $< $(RESET)"
 
 $(NAME) : $(OBJ)
-	$(CC) $(CFLAGS) $^ -o $@
+	@$(CPP) $(CPPFLAGS) $^ -o $@
+	@echo "$(GREEN) ------ Built success ------ $(RESET)"
 
-all		: $(NAME)
+all : $(NAME)
 
-clean	:
-	rm -rf $(OBJ)
+clean :
+	@echo "$(RED) REMOVED OBJ $(RESET)"
+	@rm -rf $(OBJ)
 
-fclean	: clean
-	rm -rf $(NAME)
+fclean : clean
+	@echo "$(RED) REMOVED $(NAME) $(RESET)"
+	@rm -rf $(NAME)
 
-re		: fclean all
+re : fclean all
 
-.PHONY:	all clean fclean re
+.PHONY : all clean fclean re
+
