--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: ayakoubi <ayakoubi@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/19 11:31:49 by ayakoubi          #+#    #+#              #
-#    Updated: 2023/08/02 13:46:25 by ayakoubi         ###   ########.fr        #
+#    Updated: 2023/08/16 11:42:31 by ayakoubi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,19 +19,30 @@ SRC			:= main	Zombie
 OBJ			:= $(addsuffix .o, $(SRC))
 SRC			:= $(addsuffix .cpp, $(SRC))
 
-%.o : %.cpp
-	$(CPP) $(CPPFLAGS) -c $< -o $@
+RED = \033[1;31m
+GREEN = \033[1;32m
+SPLASH = \033[5m
+BLUE = \033[1;34m
+YELLOW = \033[1;33m
+RESET = \033[0m
 
-$(NAME)	: $(OBJ)
-	$(CPP) $(CPPFLAGS) $^ -o $@
+%.o : %.cpp
+	@$(CPP) $(CPPFALGS) -c $< -o $@
+	@echo "$(YELLOW) compile >>>> $< $(RESET)"
+
+$(NAME) : $(OBJ)
+	@$(CPP) $(CPPFLAGS) $^ -o $@
+	@echo "$(GREEN) ------ Built success ------ $(RESET)"
 
 all : $(NAME)
 
 clean :
-	rm -rf $(OBJ)
+	@echo "$(RED) REMOVED OBJ $(RESET)"
+	@rm -rf $(OBJ)
 
 fclean : clean
-	rm -rf $(NAME)
+	@echo "$(RED) REMOVED $(NAME) $(RESET)"
+	@rm -rf $(NAME)
 
 re : fclean all
 
