--- a/cpp01/ex06/Makefile
+++ b/cpp01/ex06/Makefile
@@ -6,7 +6,7 @@
 #    By: ayakoubi <ayakoubi@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/09 12:22:42 by ayakoubi          #+#    #+#              #
-#    Updated: 2023/08/09 12:23:07 by ayakoubi         ###   ########.fr        #
+#    Updated: 2023/08/16 12:52:59 by ayakoubi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,18 +20,29 @@ SRC := main Harl
 OBJ	:= $(addsuffix .o, $(SRC))
 SRC := $(addsuffix .cpp, $(SRC))
 
-%.o : %.c 
-	$(CPP) $(CPPFLAGS) -c $< -o $@
+RED = \033[1;31m
+GREEN = \033[1;32m
+SPLASH = \033[5m
+BLUE = \033[1;34m
+YELLOW = \033[1;33m
+RESET = \033[0m
+
+%.o : %.cpp
+	@echo "$(YELLOW) compile >>>> $< $(RESET)"
+	@$(CPP) $(CPPFALGS) -c $< -o $@
 
 $(NAME) : $(OBJ)
-	$(CPP) $(CPPFLAGS) $^ -o $@
+	@echo "$(GREEN) ------ Built success ------ $(RESET)"
+	@$(CPP) $(CPPFLAGS) $^ -o $@
 
 all : $(NAME)
 
-clean : 
+clean :
+	@echo "$(RED) REMOVED OBJ $(RESET)"
 	@rm -rf $(OBJ)
 
 fclean : clean
+	@echo "$(RED) REMOVED $(NAME) $(RESET)"
 	@rm -rf $(NAME)
 
 re : fclean all
