ex03 handle case complite but there leaks

--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -42,7 +42,7 @@ all : $(NAME)
 
 clean :
 	@echo "$(RED) REMOVED OBJ $(RESET)"
-	@rm -rf $(OBJ)
+	@rm -rf $(OBJDIR)
 
 fclean : clean
 	@echo "$(RED) REMOVED $(NAME) $(RESET)"
